# simple-auth

./: Dockerfile  Makefile  config.toml  pyproject.toml
api/: __init__.py  routes.py
auth/: __init__.py  database.py  session.py  user.py
